award at internetware

--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2024-07]</b> Our paper on NFT Wash
+                          Trading has received the <b>ACM SIGSOFT
+                          Distinguished Paper Award</b> (announcement
+                            at <b>Internetware'24</b>)!
                           <li><b>[2024-07]</b> I'm delighted to serve
                             on the PC for <b> USENIX ATC'25</b>.</li>
                           <li><b>[2024-06]</b> I'm delighted to serve
@@ -963,6 +967,7 @@ Today,</i> etc.
                                     6px">
               <li><b>Awards:</b><br>
 	        <ul type="circle">
+                  <li><b>ACM SIGSOFT Distinguished Paper Award</b>, announcement at Internetware'24.</li>
                   <li><b>Research Talent Accelerator Award</b>, Monash University, 2023.</li>
                   <li>
                     <b>Best Paper Award</b> at NSS 2022.
