--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ http://www.templatemo.com/tm-395-urbanic
                                                                        src=images/email/email1.png></a>
                         <!--     <a href="doc/5A096C34.asc"> -->
                               <!-- <font size="3">(PGP Key)</font></a> -->
-                            <br><font style="color:red">
-                                <b>We are hiring one postdoc!</b> <br>
-                                <a href="https://usyd.wd3.myworkdayjobs.com/en-US/USYD_EXTERNAL_CAREER_SITE/job/Postdoctoral-Research-Fellow---Blockchain_0119398"><b>Apply here!</b></a></font>
-                            <br>
+                            <!-- <br><font style="color:red"> -->
+                            <!--     <b>We are hiring one postdoc!</b> <br> -->
+                            <!--     <a href="https://usyd.wd3.myworkdayjobs.com/en-US/USYD_EXTERNAL_CAREER_SITE/job/Postdoctoral-Research-Fellow---Blockchain_0119398"><b>Apply here!</b></a></font> -->
+                            <!-- <br> -->
 
                             </div>
                           <!-- </div> -->
@@ -850,8 +850,8 @@ Today,</i> etc.
             <!-- <li>Runchao Han (Feb.2019-), Monash University. </li> -->
             <li>Xiangwen Yang (July 2024-), The University of Sydney.</li>
             <li>Zhichun Lu (July 2024-), The University of Sydney.</li>
-            <li>Hans Schmiedel (Nov. 2021-), Monash University.</li>
-            <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
+            <li>Hans Schmiedel (Nov. 2021-), The University of Sydney.</li>
+            <li>Yuanzhe Zhang (June 2021-), The University of Sydney.</li>
             <li>Liangrong Zhao (March 2021-), Monash University.</li>
           </ol>
           <font size="4"><b>Co-supervision</b><br>
