--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <b>[2024-09]</b> Our works on blockchain
+                            consensus have been accepted for
+                            publication at
+                          <b>ACSAC'24</b> and <b>PRDC'24'</b>. Well
+                          done Liangrong! </li>
+
                           <li><b>[2024-07]</b> Our paper on NFT Wash
                           Trading has received the <b>ACM SIGSOFT
                           Distinguished Paper Award</b> (announcement
@@ -193,7 +199,7 @@ http://www.templatemo.com/tm-395-urbanic
                             on Dependable Computing <b>(IEEE
                             PRDC'24)</b>.
                           </li>
-                            <b>[2024-04]</b> Our paper on "Modeling
+                            <li><b>[2024-04]</b> Our paper on "Modeling
                             Mobile Crash in Byzantine Consensus" has
                             been accepted for publication at
                             <b>CSF'24</b>. Well done Hans
@@ -733,15 +739,16 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
-
                             <br> <b>[Our view point on TEE-BFT]</b> <a href="https://arxiv.org/pdf/2312.05714.pdf">"Vivisecting
                             the Dissection: On the Role of Trusted
                               Components in BFT Protocols".</a>
-                            <br> <b>[CSF'24]</b> "Modeling Mobile Crash in Byzantine Consensus"
-                            <br> <b>[IPDPS'24]</b> "OneShot:
+                            <br> <b>[ACSAC'24]</b> "Janus: An Asynchronous Common Subset Protocol with Trusted Components"
+                            <br> <b>[IEEE TDSC'24]</b> "Trusted Hardware Assisted Reliable Broadcast and Leaderless BFT Consensus"
+                            <br> <b>[IEEE CSF'24]</b> "Modeling Mobile Crash in Byzantine Consensus"
+                            <br> <b>[IEEE IPDPS'24]</b> "OneShot:
                             View-Adapting Streamlined BFT with TEEs"
-                            <br> <b>[DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
-                            <br> <b>[DSN'23]</b> "Analyzing the Performance of the Inter-Blockchain Communication Protocol"
+                            <br> <b>[IEEE/IFIP DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
+                            <br> <b>[IEEE/IFIP DSN'23]</b> "Analyzing the Performance of the Inter-Blockchain Communication Protocol"
                             <br> <b>[FC'23]</b> "Fair Delivery of Decentralised Randomness Beacon"
                             <br> <b>[FC'23]</b> "Leveraging the Verifier’s Dilemma to Double Spend in Bitcoin"
                             <br> <b>[IEEE S&P'23]</b> "BlindHub: Bitcoin-Compatible Privacy-Preserving Payment Channel Hubs Supporting Variable Amounts"
