--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ http://www.templatemo.com/tm-395-urbanic
 
         <!-- Custom styles for this template -->
         <link href="js/colorbox/colorbox.css"  rel='stylesheet' type='text/css'>
-        <link href="css/templatemo_style.css"  rel='stylesheet' type='text/css'>
+        <link href="css/templatemo_style.css"  rel='stylesheet' type='tex
+t/css'>
+
 
 
     </head>
@@ -104,6 +106,7 @@ http://www.templatemo.com/tm-395-urbanic
                             <!-- <br><br> -->
 
                             <!-- <b>A list of projects for Honours and/or Master Thesis is <a href="doc/projects.pdf">here</a>.</b><br><br> -->
+                            <b>My <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jiangshan-yu.html">Research Profile</a></b> at the University of Sydney.<br>
                             <b>
                               Contact:</b>
                             <br><a href="images/email/email1.png"><img style="width:
@@ -181,7 +184,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
-                          <b>[2024-09]</b> Our works on blockchain
+                          <li><b>[2024-09]</b> I'm delighted to be elected
+                            as Australian Representative to the
+                            International Federation for Information
+                            Processing (IFIP) Technical Committee 10
+                            on Computer Systems Technology.</li>
+                          <li><b>[2024-09]</b> Our works on blockchain
                             consensus have been accepted for
                             publication at
                           <b>ACSAC'24</b> and <b>PRDC'24'</b>. Well
