--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@ http://www.templatemo.com/tm-395-urbanic
 
         <!-- Custom styles for this template -->
         <link href="js/colorbox/colorbox.css"  rel='stylesheet' type='text/css'>
-        <link href="css/templatemo_style.css"  rel='stylesheet' type='tex
-t/css'>
-
+        <link href="css/templatemo_style.css"  rel='stylesheet' type='text/css'>
 
 
     </head>
@@ -106,7 +104,9 @@ t/css'>
                             <!-- <br><br> -->
 
                             <!-- <b>A list of projects for Honours and/or Master Thesis is <a href="doc/projects.pdf">here</a>.</b><br><br> -->
-                            <b>My <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jiangshan-yu.html">Research Profile</a></b> at the University of Sydney.<br>
+                            My <b><a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jiangshan-yu.html">University Research Profile</a></b>.<br>
+                            ------------------------------------------------<br>
+
                             <b>
                               Contact:</b>
                             <br><a href="images/email/email1.png"><img style="width:
@@ -189,6 +189,7 @@ t/css'>
                             International Federation for Information
                             Processing (IFIP) Technical Committee 10
                             on Computer Systems Technology.</li>
+
                           <li><b>[2024-09]</b> Our works on blockchain
                             consensus have been accepted for
                             publication at
