--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+
+                          <li><b>[2024-10]</b> I'm delighted to serve
+                            on the PC for The 2025 ACM Web
+                            Conference <b> (WWW'25)
+                            </b>.</li>
                           <li><b>[2024-09]</b> I'm delighted to be elected
                             as Australian Representative to the
                             International Federation for Information
@@ -1403,12 +1408,13 @@ Today,</i> etc.
                             <li><b>Conference Program Committee Member</b></li>
                             <b>2025</b>
                             <ol>
+                              <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b></li>
+                              <li>The 34th ACM Web Conference <b>(WWW)</b></li>
                               <li>
                                 The 55th Annual IEEE/IFIP
                                 International Conference on Dependable
                                 Systems and Networks <b>(DSN)</b>
                               </li>
-                              <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b></li>
                             </ol>
                             <b>2024</b>
                             <ol>
