--- a/index.html
+++ b/index.html
@@ -1327,6 +1327,9 @@ Today,</i> etc.
 
 	                    <li><b>Membership and direction of organisations:</b></li>
 	                    <ul type="circle">
+                              <li> [2024-present] ACS Australian
+                            Representative, IFIP Technical Committee
+                            10 on Computer Systems Technology.</li>
                               <li> [2024-present] Member,
                               Communication and Outreach Committee,
                               IFIP WG 10.4 on Dependable Computing and
@@ -1339,7 +1342,7 @@ Today,</i> etc.
                                  The 2024 Jean-Claude Laprie (JCL)
                                  Award for IFIP WG 10.4.
                                </li>
-                                <li>[2023-present] Chair, ACE Working Group on Sustainability and Social Impact.</li>
+                                <li>[2023-2024] Chair, ACE Working Group on Sustainability and Social Impact.</li>
                                 <li>[2022-present] Elected Member, IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance</li>
                                 <li>[2021-present] Scientific Advisory Board, Austrian Blockchain Center, Austria.</li>
                               </ul><br>
