--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2024-07]</b> I'm delighted to serve
+                            on the PC for <b> ACM CCS'25</b>.</li>
                           <li><b>[2024-07]</b> Our paper on NFT Wash
                           Trading has received the <b>ACM SIGSOFT
                           Distinguished Paper Award</b> (announcement
@@ -1393,6 +1395,10 @@ Today,</i> etc.
                                 Systems and Networks <b>(DSN)</b>
                               </li>
                               <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b></li>
+                              <li>
+                                The 32nd ACM Conference on Computer and Communications Security <b>(CCS)</b>
+                              </li>
+
                             </ol>
                             <b>2024</b>
                             <ol>
@@ -1400,7 +1406,7 @@ Today,</i> etc.
                                 The 50th International Conference on Very Large Data Bases <b>(VLDB)</b>
                               </li>
                               <li>
-                                The 31th ACM Conference on Computer and Communications Security <b>(CCS)</b>
+                                The 31st ACM Conference on Computer and Communications Security <b>(CCS)</b>
                               </li>
                               <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b> (ERC)</li>
                             </ol>
