--- a/index.html
+++ b/index.html
@@ -140,38 +140,43 @@ http://www.templatemo.com/tm-395-urbanic
                     </font></b>
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
-                        <p> Dr. Jiangshan Yu is an Associate Professor
-                           at the University of Sydney. He is an
-                           elected member of
+                        <p> I'm an Associate Professor at the
+                           University of Sydney. I'm an elected member
+                           of
                            the <a href="https://www.dependability.org/?page_id=265">International
                            Federation for Information Processing
                            (IFIP) Working Group 10.4 on Dependable
-                           Computing and Fault Tolerance</a>, and
-                           serves as the Australian Representative to
+                           Computing and Fault Tolerance</a>. I also
+                           serve as the Australian Representative to
                            the IFIP Technical Committee 10 on Computer
                            Systems Technology, elected by the
                            Australian Computer Society (ACS).
 
                           <br>
-                        <br>He received his PhD in Computer Science from
+                        <br>I received my PhD in Computer Science from
                       the University of Birmingham (UK), supervised
                       by <a href="https://scholar.google.co.uk/citations?user=zVGVpX4AAAAJ&hl=en">
                       Prof. Mark Ryan</a>, followed by a postdoc
                       with <a href="https://scholar.google.com/citations?user=aMHx8aUAAAAJ&hl=en">
                       Prof. Paulo Esteves-Verissimo
                           </a>(IEEE and ACM Fellow) at SnT, University
-                      of Luxembourg. Prior to joining the University
-                      of Sydney, he held positions as
+                      of Luxembourg. Before joining the University of
+                      Sydney, I held positions as
                       <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Lecturer</a>
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University. <br>
                           <br>
-                          His research interests are in the broad area
-                      of systems, dependable computing, and
-                      cybersecurity, with a recent focus on
-                      decentralised systems, such as
-                      blockchains.<br><br>
+                          My research addresses real-world challenges
+                          in creating practical, efficient systems
+                          that prioritise dependability, trust,
+                          security, privacy, and scalability. I focus
+                          on designing robust, high-performance
+                          digital infrastructures by leveraging
+                          dependable computing, decentralised systems,
+                          cryptography, and security protocols, and
+                          optimising these systems for scalability and
+                          resilience.<br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
@@ -752,9 +757,9 @@ Today,</i> etc.
                           <font size="5"><b>Research Areas: </b></font><br><br>
                           <font size="4"><b>Research Interests</b>
                           <br>
-                          Blockchain System and Application, Fault
-                          Tolerance and Consensus Algorithm, Security
-                          Protocol Design and Analysis, Applied
+                          Blockchain Systems and Applications, Fault
+                          Tolerance and Consensus Algorithms, Security
+                          Protocols, Applied
                           Cryptography, and User Privacy.
                             <br><br>
                             <b>What I have been working on recently...<br>
