--- a/index.html
+++ b/index.html
@@ -128,44 +128,31 @@ http://www.templatemo.com/tm-395-urbanic
                       </div>
                       <div class="clearfix"></div>
                       </div>
-                      <p style="font-size: 21px;"> <b>Dr. Jiangshan Yu (于江山)</b></font></p>
+                      <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
 
-                      <p style="font-size: 17px;"><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
-                      Associate Professor</a><br>University of Sydney <br><!-- <br> ARC DECRA -->
-                          <!-- Fellow (2021) -->
-                          <br>
-                          Elected Member, IFIP Working Group 10.4 <!-- on Dependable Computing and Fault Tolerance -->
-                          <br> Australian Representative to the IFIP TC 10 <!-- on Computer Systems Technology -->
-                          <br> Advisory Board, Austrian Blockchain Center
-                          <br>
+                      <p><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
+                      Associate Professor</a> <br> ARC DECRA
+                      Fellow (2021) <br> Elected Member, IFIP Working Group
+                      10.4 <br> Australian Representative to the IFIP
+                      TC 10 <br> Advisory Board, Austrian
+                      Blockchain Center<br>
                           <br>
                     </font></b>
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
-                        <p>
+                        <p> I'm an Associate Professor at the
+                           University of Sydney. I'm an elected member
+                           of
+                           the <a href="https://www.dependability.org/?page_id=265">International
+                           Federation for Information Processing
+                           (IFIP) Working Group 10.4 on Dependable
+                           Computing and Fault Tolerance</a>. I also
+                           serve as the Australian Representative to
+                           the IFIP Technical Committee 10 on Computer
+                           Systems Technology, elected by the
+                           Australian Computer Society (ACS).
 
-                          <!-- I'm an Associate Professor at the -->
-                          <!--  University of Sydney. I'm an elected member -->
-                          <!--  of -->
-                          <!--  the <a href="https://www.dependability.org/?page_id=265">International -->
-                          <!--  Federation for Information Processing -->
-                          <!--  (IFIP) Working Group 10.4 on Dependable -->
-                          <!--  Computing and Fault Tolerance</a>. I also -->
-                          <!--  serve as the Australian Representative to -->
-                          <!--  the IFIP Technical Committee 10 on Computer -->
-                          <!--  Systems Technology, elected by the -->
-                          <!--  Australian Computer Society (ACS). -->
-                          <!-- <br> -->
-                          My research addresses real-world challenges
-                          in creating practical, efficient systems
-                          that prioritise dependability, trust,
-                          security, privacy, and scalability. I focus
-                          on designing robust, high-performance
-                          digital infrastructures by leveraging
-                          dependable computing, decentralised systems,
-                          cryptography, and security protocols, and
-                          optimising these systems for scalability and
-                          resilience.<br>
+                          <br>
                         <br>I received my PhD in Computer Science from
                       the University of Birmingham (UK), supervised
                       by <a href="https://scholar.google.co.uk/citations?user=zVGVpX4AAAAJ&hl=en">
@@ -180,7 +167,16 @@ http://www.templatemo.com/tm-395-urbanic
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University. <br>
                           <br>
-<br>
+                          My research addresses real-world challenges
+                          in creating practical, efficient systems
+                          that prioritise dependability, trust,
+                          security, privacy, and scalability. I focus
+                          on designing robust, high-performance
+                          digital infrastructures by leveraging
+                          dependable computing, decentralised systems,
+                          cryptography, and security protocols, and
+                          optimising these systems for scalability and
+                          resilience.<br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
