best paper award

--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2024-11]</b> Our work on Juno, which
+                            proposes the concept of aggregated vector
+                            consensus, has received the <b>Best Paper
+                            Award</b> at IEEE PRDC! Congrats
+                            Liangrong!</li>
+
                           <li><b>[2024-10]</b> I'm delighted to serve
                             on the PC for <b> ACM CCS'25</b>.</li>
                           <li><b>[2024-10]</b> I'm delighted to serve
