update best paper award at PRDC

--- a/index.html
+++ b/index.html
@@ -1007,6 +1007,9 @@ Today,</i> etc.
                                     6px">
               <li><b>Awards:</b><br>
 	        <ul type="circle">
+                  <li>
+                    <b>Best Paper Award</b> at PRDC 2024.
+                  </li>
                   <li><b>ACM SIGSOFT Distinguished Paper Award</b>, announcement at Internetware'24.</li>
                   <li><b>Research Talent Accelerator Award</b>, Monash University, 2023.</li>
                   <li>
