--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@ http://www.templatemo.com/tm-395-urbanic
 
                             <!-- <b>A list of projects for Honours and/or Master Thesis is <a href="doc/projects.pdf">here</a>.</b><br><br> -->
                             My <b><a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jiangshan-yu.html">University Research Profile</a></b>.<br>
-                            ---------------------------------------------<br>
-
-                            <b>
-                              Contact:</b>
-                            <br><a href="images/email/email1.png"><img style="width:
-                        190px; height: 30px"
-                                                                       src=images/email/email1.png></a>
-                        <!--     <a href="doc/5A096C34.asc"> -->
+                            <br>
+                            <button 
+                              onclick="window.location.href='mailto:jiangshan.yu@sydney.edu.au'" 
+                              class="btn btn-primary"
+                              style="padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                              Contact
+                            </button>                        <!--     <a href="doc/5A096C34.asc"> -->
                               <!-- <font size="3">(PGP Key)</font></a> -->
                             <!-- <br><font style="color:red"> -->
                             <!--     <b>We are hiring one postdoc!</b> <br> -->
