--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ http://www.templatemo.com/tm-395-urbanic
                               Contact
                             </button>                        <!--     <a href="doc/5A096C34.asc"> -->
                               <!-- <font size="3">(PGP Key)</font></a> -->
-                            <!-- <br><font style="color:red"> -->
-                            <!--     <b>We are hiring one postdoc!</b> <br> -->
-                            <!--     <a href="https://usyd.wd3.myworkdayjobs.com/en-US/USYD_EXTERNAL_CAREER_SITE/job/Postdoctoral-Research-Fellow---Blockchain_0119398"><b>Apply here!</b></a></font> -->
-                            <!-- <br> -->
+                            <br><br><font style="color:red">
+                                <b>We are hiring one postdoc!</b> <br>
+                                <a href="https://usyd.wd3.myworkdayjobs.com/en-US/USYD_EXTERNAL_CAREER_SITE/job/Postdoctoral-Research-Fellow---Blockchain_0119398"><b>Apply here!</b></a></font>
+                            <br>
 
                             </div>
                           <!-- </div> -->
