--- a/index.html
+++ b/index.html
@@ -140,8 +140,11 @@ http://www.templatemo.com/tm-395-urbanic
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
                         <p> I'm an Associate Professor at the
-                           University of Sydney. I'm an elected member
-                           of
+                           University of Sydney and the the Director
+                           of the
+                           <a href=https://usyd-desci.github.io/>Sydney
+                           Blockchain Centre</a>. I'm also an elected
+                           member of
                            the <a href="https://www.dependability.org/?page_id=265">International
                            Federation for Information Processing
                            (IFIP) Working Group 10.4 on Dependable
