--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+
+                          <li><b>[2025-01]</b> Our work on "Achilles"
+                          has been accepted by <b> EuroSys’25
+                            </b>! Building on our Damysus consensus
+                            protocol (EuroSys'22), it takes an
+                            important first step toward addressing
+                            rollback issues in TEE-empowered hybrid
+                            BFT protocols.</li>
+
                           <li><b>[2024-11]</b> Our work on Juno, which
                             proposes the concept of aggregated vector
                             consensus, has received the <b>Best Paper
@@ -778,6 +787,8 @@ Today,</i> etc.
                             <br> <b>[Our view point on TEE-BFT]</b> <a href="https://arxiv.org/pdf/2312.05714.pdf">"Vivisecting
                             the Dissection: On the Role of Trusted
                               Components in BFT Protocols".</a>
+
+                            <br> <b>[EuroSys'25]</b> "Achilles: Efficient TEE-Assisted BFT Consensus via Rollback Resilient Recovery"
                             <br> <b>[ACSAC'24]</b> "Janus: An Asynchronous Common Subset Protocol with Trusted Components"
                             <br> <b>[IEEE TDSC'24]</b> "Trusted Hardware Assisted Reliable Broadcast and Leaderless BFT Consensus"
                             <br> <b>[IEEE CSF'24]</b> "Modeling Mobile Crash in Byzantine Consensus"
