--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ http://www.templatemo.com/tm-395-urbanic
                       <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
 
                       <p><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
-                      Associate Professor</a> <br> ARC DECRA
-                      Fellow (2021) <br> Elected Member, IFIP Working Group
+                            Associate Professor</a>
+                          <br> Elected Member, IFIP Working Group
                       10.4 <br> Australian Representative to the IFIP
                       TC 10 <br> Advisory Board, Austrian
                       Blockchain Center<br>
