--- a/index.html
+++ b/index.html
@@ -131,11 +131,10 @@ http://www.templatemo.com/tm-395-urbanic
 
                       <p><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
                             Associate Professor</a>
-                          <br> Elected Member, IFIP Working Group
-                      10.4 <br> Australian Representative to the IFIP
-                      TC 10 <br> Advisory Board, Austrian
-                      Blockchain Center<br>
-                          <br>
+                          <br> Elected Member, IFIP Working Group 10.4
+                          <br> Australian Representative to the IFIP TC 10
+                          <!--  <br> Advisory Board, Austrian Blockchain Center -->
+                          <br><br>
                     </font></b>
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
