--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+                          <li><b>[2025-02]</b> I'm delighted to
+                          receive <b>IEEE Technical Achievement
+                          Award</b> by IEEE TEMS TC on Blockchain and
+                          Distributed Ledger Technologies.</li>
+
                           <li><b>[2025-01]</b> Our work on "Achilles"
                           has been accepted by <b> EuroSys’25
                             </b>! Building on our Damysus consensus
@@ -1015,6 +1020,12 @@ Today,</i> etc.
                                     6px">
               <li><b>Awards:</b><br>
 	        <ul type="circle">
+                  <li>
+                    <b>IEEE Technical Achievement Award</b>, issued by
+                          the IEEE Technology and Engineering
+                          Management Society, 2024.
+                  </li>
+
                   <li>
                     <b>Best Paper Award</b> at PRDC 2024.
                   </li>
